# python-cli-bench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: benchmark.yml
src/cli_bench/: __init__.py  __main__.py  config.py  memory.py  plot.py  reporter.py  results.py  runner.py
tests/: test_compare_outputs.py
