[project]
name = "python-cli-bench"
version = "0.1.0"
description = "a benchmark harness for python CLIs"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nate Nowack", email = "nate@prefect.io" }]
keywords = ["benchmark", "cli", "performance", "hyperfine"]

dependencies = [
    "rich>=13.0.0",
    "plotext>=5.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
stats = ["scipy>=1.0.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
cli-bench = "cli_bench.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_bench"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
